[package]
name = "aiocogeo"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1"
bytes = "1.7.0"
flate2 = "1.0.20"
jpeg = { package = "jpeg-decoder", version = "0.3.0", default-features = false }
ndarray = "*"
num_enum = "*"
object_store = "0.11"
thiserror = "1"
tiff = "0.9"
weezl = "0.1.0"

[dev-dependencies]
tokio = { version = "1.9", features = ["macros", "fs", "rt-multi-thread"] }
